feat(payment): adding new features

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-    background-image: url('https://i.pinimg.com/736x/50/f6/f9/50f6f9f4d52931c70c5c91e20416785c.jpg');
+    background-image: url('https://i.pinimg.com/originals/0e/73/17/0e731764c019a7965e5574bf70946e06.gif');
     background-size: cover;
     }
     .container {
